--- a/client/src/styles/block.css
+++ b/client/src/styles/block.css
@@ -9,12 +9,14 @@
   );
   padding: 0.5rem 1rem;
   cursor: pointer;
+  transition: all 0.15s ease-in-out;
+  &:hover {
+    transform: scale(1.02);
+  }
 }
 
 .button:disabled,
 .button[disabled] {
-  /* border: 1px solid #999999; */
-  /* color: #666666; */
   background-color: #cccccc;
   background-image: none;
 }
@@ -72,4 +74,12 @@ hr {
   background-color: #b7b7b7;
   height: 1px;
   border: 0;
+}
+
+/* SELECT */
+.select {
+  width: 100%;
+  border: 1px solid rgba(85 85 85 / 0.5);
+  border-radius: 8px;
+  padding: 0.15rem 0.5rem;
 }
